--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.4",
+    "emoji-picker-react": "^4.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
