--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
