--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
+    "socket.io-client": "^4.7.5",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
